dist_man1_MANS=

if BUILD_BITSENDD
  dist_man1_MANS+=bitsendd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitsend-qt.1
endif

if BUILD_BITSEND_CLI
  dist_man1_MANS+=bitsend-cli.1
endif

if BUILD_BITSEND_TX
  dist_man1_MANS+=bitsend-tx.1
endif

if ENABLE_WALLET
if BUILD_BITSEND_WALLET
  dist_man1_MANS+=bitsend-wallet.1
endif
endif
